--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -12,6 +12,13 @@ body {
     font-family: "Mulish", sans-serif;
 }
 
+.content-wrapper {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1250px;
+    padding: 0 2rem;
+}
+
 :root {
     --primary-color: #FF5400;
     --secondary-color: #131318;
@@ -51,3 +58,57 @@ body {
     background: var(--primary-color);
     padding: 0.8rem 2.2rem;
 }
+
+/* Navbar Styles Start Here */
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3rem 0;
+}
+
+.navbar div {
+    display: flex;
+    align-items: center;
+}
+
+.nav-logo {
+    gap: 1rem;
+    cursor: pointer;
+}
+
+.nav-logo h2 {
+    color: var(--secondary-color);
+    font-size: 2.2rem;
+    font-weight: 800;
+}
+
+.nav-logo h2 span {
+    color: var(--primary-color);
+}
+
+.nav-items {
+    gap: 2.8rem;
+}
+
+.nav-items a {
+    text-decoration: none;
+    color: var(--secondary-text-des-color);
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.nav-items a:hover {
+    color: var(--primary-color);
+    font-weight: 700;
+    transition: 0.5s;
+}
+
+.navbar .toggle-btn {
+    color: var(--secondary-color);
+    font-size: 1.25rem;
+    cursor: pointer;
+    display: none;
+}
+
+/* Navbar Styles End Here */
