--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -25,6 +25,8 @@ body {
     --white-color: #FFF;
     --primary-text-des-color: #131318b3;
     --secondary-text-des-color: #5A5A5D;
+    --primary-bg-color: #fbb5630d;
+    --secondary-bg-color: #29cef60d;
 }
 
 .primary-title {
@@ -60,7 +62,7 @@ body {
     border: none;
     outline: none;
     color: var(--white-color);
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
     cursor: pointer;
 }
@@ -126,7 +128,7 @@ body {
 
 /* Banner Styles Start Here */
 .banner {
-    border-radius: 16px;
+    border-radius: 1rem;
     background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(./../image/banner.png);
     width: 100%;
     height: 80vh;
@@ -136,7 +138,7 @@ body {
 
 .banner-content {
     text-align: center;
-    padding-top: 120px;
+    padding-top: 7rem;
 }
 
 .banner-content p {
@@ -146,7 +148,7 @@ body {
 
 .banner-travel-find-now-box {
     display: inline-flex;
-    border-radius: 8px;
+    border-radius: .5rem;
     padding: 1rem;
     gap: 1.4rem;
     background: #ffffff4d;
@@ -177,7 +179,7 @@ body {
 .our-popler-tours {
     display: flex;
     align-items: center;
-    padding: 100px 0;
+    padding: 6.5rem 0;
     gap: 1.5rem;
     width: 100%;
 }
@@ -197,9 +199,9 @@ body {
 /* Out Popular Tour Styles End Here */
 
 
-/* choose-your-destination Styles Start Here */
+/* Choose Your Destination Styles Start Here */
 .choose-your-destination {
-    margin-bottom: 100px;
+    margin-bottom: 6.5rem;
 }
 
 .destination-content {
@@ -268,4 +270,61 @@ body {
 }
 
 
-/* choose-your-destination Styles End Here */
+/* Choose Your Destination Styles End Here */
+
+
+/* Why Choose Us  Styles Start Here */
+.why-choose-us-service {
+    margin-bottom: 6.5rem;
+}
+
+.why-choose-us-service-col-1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.why-choose-us-service-col-2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.why-choose-us-service-col-2-wrapper {
+    width: 50%;
+}
+
+.why-choose-us-content {
+    text-align: center;
+}
+
+.why-choose-us-content p {
+    padding: 1.2rem 0 3rem 0;
+}
+
+.why-choose-us-service-box {
+    background-color: var(--primary-bg-color);
+    border-radius: 1rem;
+    border: 1px solid #fbb56333;
+    padding: 2rem;
+}
+
+.why-choose-us-service-box-2 {
+    background-color: var(--secondary-bg-color);
+    border-radius: 1rem;
+    border: 1px solid #29cef633;
+    padding: 2rem;
+}
+
+.why-choose-us-service-box h4,
+.why-choose-us-service-box-2 h4 {
+    color: var(--secondary-color);
+    font-size: 1.5rem;
+    font-weight: 800;
+    padding: 2rem 0 1rem 0;
+}
+
+/* Why Choose Us  Styles End Here */
