--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -384,9 +384,56 @@ body {
 
 .newsletter-subscription-box hr {
     height: 1px;
-    background: rgba(19, 19, 24, 0.10);
+    background: #1313181a;
     border: none;
     margin: 1.4rem 0;
 }
 
 /* Newsletter Subscription Styles End Here */
+
+
+/* Footer Styles Start Here */
+footer {
+    background: #1313180d;
+    padding: 7rem 0;
+    text-align: center;
+}
+
+.footer-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    cursor: pointer;
+}
+
+.footer-logo h2 {
+    color: var(--secondary-color);
+    font-size: 2rem;
+    font-weight: 800;
+}
+
+.footer-logo h2 span {
+    color: var(--primary-color);
+}
+
+.footer p {
+    padding: 1rem 0 2rem 0;
+}
+
+.footer-social-icons i {
+    font-size: 1.4rem;
+    margin-right: 2rem;
+    cursor: pointer;
+}
+
+.footer hr {
+    height: 1px;
+    width: 60%;
+    margin: 3.2rem auto;
+    border: none;
+    background: #1313181a;
+
+}
+
+/* Footer Styles End Here */
