--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -60,6 +60,11 @@
         width: 100%;
     }
 
+    /*  */
+    .vacation-bundles-packages  {
+        flex-direction: column;
+    }
+
     /* Destination Style Here */
     .destination-content p br {
         display: none;
