--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -131,7 +131,7 @@ body {
     border-radius: 1rem;
     background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(./../image/banner.png);
     width: 100%;
-    height: 80vh;
+    height: 550px;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -510,6 +510,7 @@ body {
 
 .newsletter-discont-img {
     position: relative;
+    width: 60%;
 }
 
 .newsletter-discont-img img {
